package com.example.filetest;

import android.os.Environment;

import java.io.File;

public class Consts {
    public static String NAME = "name", URL = "url", OLD_PRICE = "old_price", COUNT = "count", TRADES_FILE_NAME = "myTrades.txt", DOLLAR = "Р", NEEDED_CLASS = ".PriceInformation__price--26G", URL_SAMPLE = "https://www.finam.ru/quote/moex-akcii/", EMAIL = "email", PASS = "pass";
    public static int GREEN_BG_IMAGE = R.drawable.analytics_graph_green, ORANGE_BG_IMAGE = R.drawable.analytics_graph;
}
