@startuml

title __FILETEST.APP's Class Diagram__\n

  namespace com.example.filetest {
    class com.example.filetest.AddFragment {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.AuthHandler {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.BlankFragment {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.BuildConfig {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.ClearDialog {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.Colors {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.Consts {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.FileHandler {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.HTTPHandler {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.LockableScrollView {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.MainActivity {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.MainScreen {
    }
  }
  

  namespace com.example.filetest {
    class com.example.filetest.TabFragment {
    }
  }
  

  com.example.filetest.AddFragment -up-|> androidx.fragment.app.Fragment
  com.example.filetest.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.example.filetest.ClearDialog -up-|> androidx.fragment.app.DialogFragment
  com.example.filetest.HTTPHandler .up.|> java.lang.Runnable
  com.example.filetest.LockableScrollView -up-|> android.widget.ScrollView
  com.example.filetest.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.filetest.MainScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.filetest.MainScreen o-- com.example.filetest.LockableScrollView : scrollView
  com.example.filetest.TabFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
